--- a/Snake.html
+++ b/Snake.html
@@ -28,7 +28,10 @@
     </div>
 
 </div>
-<br > 
+<br >
+<br >
+<br >
+
 
 <body>
     <style>
@@ -37,7 +40,7 @@
             margin: 0;
         }
         canvas {
-            background: #ff0000;
+            background: #525050;
             display: block;
             margin: auto ;
         }
